# yap_torrent

./: .gitignore  README.md  config.json  main.py  pyproject.toml  test.py  upnp.py
.github/workflows/: python-publish-plugins-ui.yml  python-publish.yml
app/: __init__.py  announce_system.py  application.py  config.py  peer_system.py  piece_system.py  profile_system.py  utils.py  watch_system.py
app/components/: bitfield_ec.py  peer_ec.py  piece_ec.py  torrent_ec.py  tracker_ec.py
core/: DataStorage.py
plugins/simple_controls/: README.md  pyproject.toml
plugins/ui/: README.md  pyproject.toml
plugins/ui/src/yap_torrent_ui/: __init__.py  ui_app.py  utils.py
plugins/ui/src/yap_torrent_ui/screens/: add_magnet.py  torrents_list.py
src/: main.py
src/yap_torrent/: __init__.py  application.py  config.py  env.py  system.py  upnp.py  utils.py
system/: __init__.py  peers.py  pieces.py  torrents.py  watcher.py
terminal/: TerminalApp.py
torrent/: __init__.py  connection.py  parser.py  structures.py  tracker.py
torrent_app/: __init__.py  application.py  config.py  upnp.py  utils.py
torrent_app/components/: bitfield_ec.py  extensions.py  peer_ec.py  piece_ec.py  torrent_ec.py  tracker_ec.py
torrent_app/dht/: bt_dht_messages.py  connection.py  nodes.py  routing.py  tokens.py
torrent_app/plugins/: __init__.py
torrent_app/protocol/: __init__.py  bt_ext_messages.py  bt_main_messages.py  connection.py  extensions.py  magnet.py  parser.py  structures.py  tracker.py  udp_tracker.py
yap_torrent/: __init__.py  application.py  config.py  utils.py
(+102 files in other folders)
